Thu Nov 26 08:57:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * modules/ProjectCreator.pm:

          Reverted allowing double-quote characters to be treated
          in a project specific way for the. If quotes are to be
          preserved within "idlflags" inside project mpc files, then
          explicit <%quote%> must be used. Swapping natual quotes
          broke other parts of MPC parsing.

Tue Nov 17 15:05:06 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a problem with my last change.  In some cases, a perl
          variable wasn't set causing strange template variable results.

Mon Nov 16 02:52:53 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * config/msgfmt.mpb:

          Added a base project to utilize the msgfmt executable.

        * modules/ProjectCreator.pm:

          Fixed a bug where adding to a scoped template variable nullified
          the setting of the non-scoped template variable.

Fri Nov 13 15:30:00 UTC 2009  Simon Massey  <sma@prismtech.com>

        * modules/ProjectCreator.pm:

          update_template_variable() now processes values through
          replace_parameters() and treats double-quote characters
          in a project specific way. This allows the "tao_idlflags"
          template variable to contain quoted roots, to allow for
          spaces within the directory names.
          Also convert_command_parameters() now also treats
          double-quote characters in a project specific way for the
          same reason, to allow " to be used within "idlflags" inside
          project mpc files.

Wed Nov 11 07:00:20 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:

          Don't use visibility with ndds

Mon Nov  9 15:22:20 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * config/qt4_core.mpb:

          Added QT4_INCDIR to allow user to specify include directory